# neug

./: CMakeLists.txt
.github/workflows/: build-extensions.yml  neug-extension-test.yml  neug-test.yml
cmake/: BuildArrowAsThirdParty.cmake
doc/source/data_io/: _meta.ts  graph_format_import_design.md  import_data.md  index.md  load_as.md  load_data.md
doc/source/extensions/: index.md  load_gds.md  load_parquet.md  load_s3.md
doc/source/运营/: marketing_plan.md  medium-openclaw-architecture-xray.md  openclaw-architecture-xray-zh.md  openclaw-architecture-xray.md  openclaw-extension-dev-guide.md  openclaw-neug-showcase-en.md  openclaw-neug-showcase-wechat.md  openclaw-neug-showcase-xhs.md  openclaw-neug-showcase-zh.md  openclaw-neug-showcase-zhihu.md  openclaw-user-token-cost.md  report_full.md  report_short.md  series_plan.md  wechat-openclaw-architecture-xray.md  xiaohongshu-openclaw-architecture-xray.md  (+1 more)
example_dataset/iceberg/: generate_test_data.py  generate_test_data_with_deletes.py
extension/: CMakeLists.txt
extension/iceberg/: CMakeLists.txt
extension/iceberg/include/: iceberg_delete_filter.h  iceberg_options.h  iceberg_predicate_pruner.h  iceberg_read_function.h
extension/iceberg/include/metadata/: iceberg_manifest.h  iceberg_metadata.h  iceberg_snapshot.h
extension/iceberg/include/schema/: iceberg_type_mapper.h
extension/iceberg/src/: iceberg_delete_filter.cpp  iceberg_extension.cpp  iceberg_options.cpp  iceberg_predicate_pruner.cpp  iceberg_read_function.cpp
extension/iceberg/src/metadata/: iceberg_manifest.cpp  iceberg_metadata.cpp  iceberg_snapshot.cpp
extension/iceberg/src/schema/: iceberg_type_mapper.cpp
extension/iceberg/tests/: iceberg_test.cpp
extension/s3/: CMakeLists.txt
scripts/: install_deps.sh
specs/004-iceberg-extension/: catalog-integration-spec.md  plan.md  spec.md
specs/004-temp-graph/: design-proposal.md  plan.md  spec.md  storage-design-comparison.md
specs/005-copy-temp-query/: spec.md
specs/006-gds-multi-label/: plan.md  spec.md
src/main/: connection.cc  query_processor.cc
tests/storage/: CMakeLists.txt  test_copy_temp.cc  test_load_as.cc  test_temporary_graph.cc
(+83 files in other folders)
